--- a/styles/styleEstante.css
+++ b/styles/styleEstante.css
@@ -8,6 +8,17 @@
   --text-price-color: #002f52;
   --text-author-color: #858585;
   --text-tag-color: #9c9c9c;
+  --cor-de-fundo: #EBECEE;
+  --branco: #FFFFFF;
+  --laranja: #EB9B00;
+  --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+  --fonte-principal: "Poppins";
+  --azul: #002F52;
+  --fonte-secundario: "Josefin Sans";
+  --preto: #000000;
+  --cinza: #474646;
+  --cinza-claro: #858585;
+  --vermelho: #D94937;
 }
 
 body {
@@ -22,8 +33,69 @@ body {
 .header {
   text-align: center;
   width: 100%;
-  background-color: var(--bg-color);
   margin: 15px 15px;
+ 
+}
+.logo-img {
+  margin: 10px;
+}
+
+.opções {
+  display: flex;
+  margin-right: auto;
+  justify-content: center;
+}
+
+.opções__item {
+  padding: 0 1em;
+  text-transform: uppercase;
+}
+
+.opções__link {
+  text-decoration: none;
+  color: var(--preto);
+}
+
+.opções__botão:checked~.lista-menu {
+  display: block;
+  width: auto;
+}
+
+.opções__botão {
+  display: none;
+}
+
+.opções__botão:checked~.opções__rotulo>.opções__item {
+  background: var(--azul-degrade);
+  color: var(--branco);
+}
+
+.opções__item {
+  padding: 2em 1em;
+}
+
+.container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.container__imagem {
+  padding: 1em;
+}
+
+.container__texto {
+  display: none;
+}
+
+.container__imagem-transparente {
+  display: none;
+}
+
+.container__link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: var(--preto);
 }
 
 .banner {
